--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    
+    <!-- Header -->
+    <header>
+      <img src="resources/images/ic-logo.svg">
+      <span>COLMAR ACADEMY</span>
+      <nav class="header">
+        <ul>
+          <li><a href="#">On Campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For Companies</a></li>
+          <li><a href="#">Sign In</a></li>\
+        </ul>
+      </nav>
+    </header>
+
+
   </body>
 </html>
