--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
       </nav>
     </header>
 
+    <!-- Main Banner -->
+    <div class="banner">
+      <img src="resources/images/banner.jpg">
+      <h1>Learn something new everday</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+      <div class="button">
+        <span>Start here</span>
+      </div>
+    </div>
+
 
   </body>
 </html>
