--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">For Companies</a></li>
-          <li><a href="#">Sign In</a></li>\
+          <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
     </header>
@@ -29,6 +29,48 @@
         <span>Start here</span>
       </div>
     </div>
+
+    <!-- Information Section -->
+    <div class="information">
+      <div class="main">
+        <img src="resources/images/information-main.jpg">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <h4>
+          "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+        </h4>
+        <span>Emanuel, Sr. Strategist at Hiring.com</span>
+      </div>
+
+      <div class="secondary">
+        <div class="orientation">
+          <img src="resources/images/information-orientation">
+          <h3>Orientation date</h3>
+          <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
+          <ul>
+            <li><a href="#">Read more</a></li>
+          </ul>
+        </div>
+
+        <div class="campus">
+          <img src="resources/images/information-campus">
+          <h3>Our campus</h3>
+          <h4>Find which campus is close by you</h4>
+          <ul>
+            <li><a href="#">Read more</a></li>
+          </ul>
+        </div>
+
+        <div class="lecture">
+          <img src="resources/images/information-lecture">
+          <h3>Our guest lecture</h3>
+          <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
+          <ul>
+            <li><a href="#">Read more</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
 
 
   </body>
