--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="secondary">
         <div class="orientation">
-          <img src="resources/images/information-orientation">
+          <img src="resources/images/information-orientation.jpg">
           <h3>Orientation date</h3>
           <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
           <ul>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="campus">
-          <img src="resources/images/information-campus">
+          <img src="resources/images/information-campus.jpg">
           <h3>Our campus</h3>
           <h4>Find which campus is close by you</h4>
           <ul>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="lecture">
-          <img src="resources/images/information-lecture">
+          <img src="resources/images/information-lecture.jpg">
           <h3>Our guest lecture</h3>
           <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
           <ul>
@@ -70,6 +70,55 @@
         </div>
       </div>
     </div>
+
+    <!-- Course Section -->
+    <div class="course">
+      <h2>Start learning</h2>
+      <div class="degrees">
+        <div class="software">
+          <img src="resources/images/course-software.jpg">
+          <h3>Software Engineering</h3>
+          <span>COURSES</span>
+          <h4>Web Development, Mobile Development, iOT, APIs</h4>
+        </div>
+
+        <div class="art">
+          <img src="resources/images/course-computer-art.jpg">
+          <h3>Computer Art</h3>
+          <span>COURSES</span>
+          <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h4>
+        </div>
+
+        <div class="design">
+          <img src="resources/images/course-design.jpg">
+          <h3>Software engineering</h3>
+          <span>COURSES</span>
+          <h4>User Experience Design, User Research, Visual Design</h4>
+        </div>
+
+        <div class="data">
+          <img src="resources/images/course-data.jpg">
+          <h3>Data</h3>
+          <span>COURSES</span>
+          <h4>Data Science, Big Data, SQL, Data Visualization</h4>
+        </div>
+
+        <div class="business">
+          <img src="resources/images/course-business.jpg">
+          <h3>Business</h3>
+          <span>COURSES</span>
+          <h4>Product Development, Business Development, Startup</h4>
+        </div>
+
+        <div class"marketing">
+          <img src="resources/images/course-marketing.jpg">
+          <h3>Marketing</h3>
+          <span>COURSES</span>
+          <h4>Analytics, Content Marketing, Mobile Marketing</h4>
+        </div>
+      </div>
+    </div>
+
 
 
 
