--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Main Banner -->
     <div class="banner">
       <img src="resources/images/banner.jpg">
-      <h1>Learn something new everday</h1>
+      <h1>LEARN SOMETHING NEW EVERYDAY</h1>
       <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
       <div class="button">
         <span>Start here</span>
@@ -34,7 +34,7 @@
     <div class="information">
       <div class="main">
         <img src="resources/images/information-main.jpg">
-        <h2>It doesn't hurt to keep practicing</h2>
+        <h2>IT DOESN'T HURT TO KEEP PRACTICING</h2>
         <h4>
           "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
         </h4>
@@ -73,7 +73,7 @@
 
     <!-- Course Section -->
     <div class="course">
-      <h2>Start learning</h2>
+      <h2>START LEARNING</h2>
       <div class="degrees">
         <div class="software">
           <img src="resources/images/course-software.jpg">
@@ -91,7 +91,7 @@
 
         <div class="design">
           <img src="resources/images/course-design.jpg">
-          <h3>Software engineering</h3>
+          <h3>Design</h3>
           <span>COURSES</span>
           <h4>User Experience Design, User Research, Visual Design</h4>
         </div>
@@ -118,6 +118,36 @@
         </div>
       </div>
     </div>
+
+    <!-- Thesis Section -->
+    <div class="thesis">
+      <h2>THESIS EXHIBIT</h2>
+      <div class="video">
+        <video width="320" height="240" controls>
+          <source src="resoucres/videos/thesis.mp4" type="video/mp4">
+        </video>
+        <h3>Reimagine Urban</h3>
+        <h4>
+          "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+        </h4>
+      </div>
+
+      <div class="secondary">
+        <div class="fisma">
+          <img src="resources/images/thesis-fisma.jpg">
+          <h3>Fisma: Design and Prototype</h3>
+          <h4>Designer showcase of new prototype product</h4>
+        </div>
+
+        <div class="now-then">
+          <img src="resources/images/thesis-now-and-then.jpg">
+          <h3>Now and Then</h3>
+          <h4>Research study about New York</h4>
+        </div>
+      </div>
+    </div>
+
+
 
 
 
