--- a/index.html
+++ b/index.html
@@ -147,6 +147,15 @@
       </div>
     </div>
 
+    <!-- Footer -->
+    <footer>
+      <span>&copy 2016 Colmar Academy. All rights reserved.</span>
+      <ul>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Privacy</a></li>
+      </ul>
+    </footer>
+
 
 
 
