--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
   <body>
     <!-- Header -->
     <header>
-      <img src="resources/images/ic-logo.svg">
-      <span>COLMAR ACADEMY</span>
+      <div class="logo">
+        <img src="resources/images/ic-logo.svg">
+        <span id="colmar">COLMAR</span>
+        <span id="academy"> ACADEMY</span>
+      </div>
+
       <nav class="header">
         <ul>
           <li><a href="#">On Campus</a></li>
