Banner css - initial

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
     <!-- Main Banner -->
     <div class="banner">
       <img src="resources/images/banner.jpg">
-      <h1>LEARN SOMETHING NEW EVERYDAY</h1>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-      <div class="button">
-        <span>Start here</span>
+      <div class="headline">
+        <h1>LEARN SOMETHING<br>NEW EVERYDAY</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <div class="button">
+          <span>Start here</span>
+        </div>
       </div>
     </div>
 
