Banner css - commit #2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Colmar Academy</title>
     <link href="resources/css/reset.css" type="text/css" rel="stylesheet">
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700" rel="stylesheet">
   </head>
   <body>
     <!-- Header -->
@@ -32,7 +32,7 @@
         <h1>LEARN SOMETHING<br>NEW EVERYDAY</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="button">
-          <span>Start here</span>
+          <span>START HERE</span>
         </div>
       </div>
     </div>
