Information css - initial

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="information">
       <div class="main">
         <img src="resources/images/information-main.jpg">
-        <h2>IT DOESN'T HURT TO KEEP PRACTICING</h2>
+        <h2>IT DOESN'T HURT<br>TO KEEP PRACTICING</h2>
         <h4>
           "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
         </h4>
@@ -49,31 +49,37 @@
       </div>
 
       <div class="secondary">
-        <div class="orientation">
+        <div class="secondary-content">
           <img src="resources/images/information-orientation.jpg">
-          <h3>Orientation date</h3>
-          <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
-          <ul>
-            <li><a href="#">Read more</a></li>
-          </ul>
+          <div class="text">
+            <h3>ORIENTATION DATE</h3>
+            <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
+            <ul>
+              <li><a href="#">Read more</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="campus">
+        <div class="secondary-content">
           <img src="resources/images/information-campus.jpg">
-          <h3>Our campus</h3>
-          <h4>Find which campus is close by you</h4>
-          <ul>
-            <li><a href="#">Read more</a></li>
-          </ul>
+          <div class="text">
+            <h3>OUR CAMPUS</h3>
+            <h4>Find which campus is close by you</h4>
+            <ul>
+              <li><a href="#">Read more</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="lecture">
-          <img src="resources/images/information-lecture.jpg">
-          <h3>Our guest lecture</h3>
-          <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
-          <ul>
-            <li><a href="#">Read more</a></li>
-          </ul>
+        <div class="secondary-content">
+          <img src="resources/images/information-guest-lecture.jpg">
+          <div class="text">
+            <h3>OUR GUEST LECTURE</h3>
+            <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
+            <ul>
+              <li><a href="#">Read more</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -82,42 +88,42 @@
     <div class="course">
       <h2>START LEARNING</h2>
       <div class="degrees">
-        <div class="software">
+        <div class="degree-name">
           <img src="resources/images/course-software.jpg">
           <h3>Software Engineering</h3>
           <span>COURSES</span>
           <h4>Web Development, Mobile Development, iOT, APIs</h4>
         </div>
 
-        <div class="art">
+        <div class="degree-name">
           <img src="resources/images/course-computer-art.jpg">
           <h3>Computer Art</h3>
           <span>COURSES</span>
           <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h4>
         </div>
 
-        <div class="design">
+        <div class="degree-name">
           <img src="resources/images/course-design.jpg">
           <h3>Design</h3>
           <span>COURSES</span>
           <h4>User Experience Design, User Research, Visual Design</h4>
         </div>
 
-        <div class="data">
+        <div class="degree-name">
           <img src="resources/images/course-data.jpg">
           <h3>Data</h3>
           <span>COURSES</span>
           <h4>Data Science, Big Data, SQL, Data Visualization</h4>
         </div>
 
-        <div class="business">
+        <div class="degree-name">
           <img src="resources/images/course-business.jpg">
           <h3>Business</h3>
           <span>COURSES</span>
           <h4>Product Development, Business Development, Startup</h4>
         </div>
 
-        <div class"marketing">
+        <div class"degree-name">
           <img src="resources/images/course-marketing.jpg">
           <h3>Marketing</h3>
           <span>COURSES</span>
