Course css - initial

--- a/index.html
+++ b/index.html
@@ -86,48 +86,57 @@
 
     <!-- Course Section -->
     <div class="course">
-      <h2>START LEARNING</h2>
+      <div class"course-headline">
+        <h2>START LEARNING</h2>
+      </div>
+
       <div class="degrees">
-        <div class="degree-name">
-          <img src="resources/images/course-software.jpg">
-          <h3>Software Engineering</h3>
-          <span>COURSES</span>
-          <h4>Web Development, Mobile Development, iOT, APIs</h4>
+
+        <div class="top">
+          <div class="degree-content">
+            <img src="resources/images/course-software.jpg">
+            <h3>SOFTWARE ENGINEERING</h3>
+            <span>COURSES</span>
+            <h4>Web Development, Mobile Development, iOT, APIs</h4>
+          </div>
+
+          <div class="degree-content">
+            <img src="resources/images/course-computer-art.jpg">
+            <h3>COMPUTER ART</h3>
+            <span>COURSES</span>
+            <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h4>
+          </div>
+
+          <div class="degree-content">
+            <img src="resources/images/course-design.jpg">
+            <h3>DESIGN</h3>
+            <span>COURSES</span>
+            <h4>User Experience Design, User Research, Visual Design</h4>
+          </div>
         </div>
 
-        <div class="degree-name">
-          <img src="resources/images/course-computer-art.jpg">
-          <h3>Computer Art</h3>
-          <span>COURSES</span>
-          <h4>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</h4>
-        </div>
+        <div class="bottom">
+          <div class="degree-content">
+            <img src="resources/images/course-data.jpg">
+            <h3>DATA</h3>
+            <span>COURSES</span>
+            <h4>Data Science, Big Data, SQL, Data Visualization</h4>
+          </div>
 
-        <div class="degree-name">
-          <img src="resources/images/course-design.jpg">
-          <h3>Design</h3>
-          <span>COURSES</span>
-          <h4>User Experience Design, User Research, Visual Design</h4>
-        </div>
+          <div class="degree-content">
+            <img src="resources/images/course-business.jpg">
+            <h3>BUSINESS</h3>
+            <span>COURSES</span>
+            <h4>Product Development, Business Development, Startup</h4>
+          </div>
 
-        <div class="degree-name">
-          <img src="resources/images/course-data.jpg">
-          <h3>Data</h3>
-          <span>COURSES</span>
-          <h4>Data Science, Big Data, SQL, Data Visualization</h4>
-        </div>
+          <div class="degree-content">
+            <img src="resources/images/course-marketing.jpg">
+            <h3>MARKETING</h3>
+            <span>COURSES</span>
+            <h4>Analytics, Content Marketing, Mobile Marketing</h4>
+          </div>
 
-        <div class="degree-name">
-          <img src="resources/images/course-business.jpg">
-          <h3>Business</h3>
-          <span>COURSES</span>
-          <h4>Product Development, Business Development, Startup</h4>
-        </div>
-
-        <div class"degree-name">
-          <img src="resources/images/course-marketing.jpg">
-          <h3>Marketing</h3>
-          <span>COURSES</span>
-          <h4>Analytics, Content Marketing, Mobile Marketing</h4>
         </div>
       </div>
     </div>
