--- a/index.html
+++ b/index.html
@@ -143,29 +143,39 @@
 
     <!-- Thesis Section -->
     <div class="thesis">
-      <h2>THESIS EXHIBIT</h2>
-      <div class="video">
-        <video width="320" height="240" controls>
-          <source src="resoucres/videos/thesis.mp4" type="video/mp4">
-        </video>
-        <h3>Reimagine Urban</h3>
-        <h4>
-          "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
-        </h4>
+      <div class="thesis-headline">
+        <h2>THESIS EXHIBIT</h2>
       </div>
 
-      <div class="secondary">
-        <div class="fisma">
-          <img src="resources/images/thesis-fisma.jpg">
-          <h3>Fisma: Design and Prototype</h3>
-          <h4>Designer showcase of new prototype product</h4>
+      <div class="thesis-content">
+        <div class="video">
+          <video controls>
+            <source src="resoucres/videos/thesis.mp4" type="video/mp4">
+          </video>
+          <h3>REIMAGINE URBAN</h3>
+          <h4>
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+          </h4>
         </div>
 
-        <div class="now-then">
-          <img src="resources/images/thesis-now-and-then.jpg">
-          <h3>Now and Then</h3>
-          <h4>Research study about New York</h4>
+        <div class="thesis-secondary">
+          <div class="thesis-secondary-content">
+            <img src="resources/images/thesis-fisma.jpg">
+            <div class="text">
+              <h3>Fisma: Design and Prototype</h3>
+              <h4>Designer showcase of new prototype product</h4>
+            </div>
+          </div>
+
+          <div class="thesis-secondary-content">
+            <img src="resources/images/thesis-now-and-then.jpg">
+            <div class="text">
+              <h3>Now and Then</h3>
+              <h4>Research study about New York</h4>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
 
