Footer css - initial

--- a/index.html
+++ b/index.html
@@ -182,10 +182,12 @@
     <!-- Footer -->
     <footer>
       <span>&copy 2016 Colmar Academy. All rights reserved.</span>
-      <ul>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Privacy</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </nav>
     </footer>
 
 
