--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
           <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
+
+      <nav class="header-mobile">
+        <ul>
+          <li><a href="#">
+            <img src="resources/images/ic-on-campus.svg">
+          </a></li>
+          <li><a href="#">
+            <img src="resources/images/ic-online.svg">
+          </a></li>
+          <li><a href="#">
+            <img src="resources/images/ic-login.svg">
+          </a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- Main Banner -->
@@ -81,6 +95,41 @@
             </ul>
           </div>
         </div>
+
+        <!-- Mobile Images -->
+          <div class="secondary-content-mobile">
+            <img src="resources/images/information-orientation-mobile.jpg">
+            <div class="text-mobile">
+              <h3>ORIENTATION DATE</h3>
+              <h4>Tue 10/11 & Wed 10/12: 8am-3pm</h4>
+              <ul>
+                <li><a href="#">Read more</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="secondary-content-mobile">
+            <img src="resources/images/information-campus-mobile.jpg">
+            <div class="text-mobile">
+              <h3>OUR CAMPUS</h3>
+              <h4>Find which campus is close by you</h4>
+              <ul>
+                <li><a href="#">Read more</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="secondary-content-mobile">
+            <img src="resources/images/information-guest-lecture-mobile.jpg">
+            <div class="text-mobile">
+              <h3>OUR GUEST LECTURE</h3>
+              <h4>Join a keynote with Oliver Sack about music in medical treatment</h4>
+              <ul>
+                <li><a href="#">Read more</a></li>
+              </ul>
+            </div>
+          </div>
+
       </div>
     </div>
 
