Mobile css - course

--- a/index.html
+++ b/index.html
@@ -190,6 +190,34 @@
       </div>
     </div>
 
+        <!-- Degrees Mobile -->
+      <div class="course-mobile">
+        <div class"course-headline-mobile">
+          <h2>START LEARNING</h2>
+        </div>
+
+        <div class="degrees-mobile">
+          <div class="degree-content-mobile">
+            <h3>SOFTWARE ENGINEERING</h3>
+          </div>
+          <div class="degree-content-mobile">
+            <h3>COMPUTER ART</h3>
+          </div>
+          <div class="degree-content-mobile">
+            <h3>DESIGN</h3>
+          </div>
+          <div class="degree-content-mobile">
+            <h3>DATA</h3>
+          </div>
+          <div class="degree-content-mobile">
+            <h3>BUSINESS</h3>
+          </div>
+          <div class="degree-content-mobile">
+            <h3>MARKETING</h3>
+          </div>
+        </div>
+      </div>
+
     <!-- Thesis Section -->
     <div class="thesis">
       <div class="thesis-headline">
