--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>LEARN SOMETHING<br>NEW EVERYDAY</h1>
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <div class="button">
-          <span>START HERE</span>
+          <a href="#">START HERE</a>
         </div>
       </div>
     </div>
@@ -197,24 +197,37 @@
         </div>
 
         <div class="degrees-mobile">
-          <div class="degree-content-mobile">
-            <h3>SOFTWARE ENGINEERING</h3>
-          </div>
-          <div class="degree-content-mobile">
-            <h3>COMPUTER ART</h3>
-          </div>
-          <div class="degree-content-mobile">
-            <h3>DESIGN</h3>
-          </div>
-          <div class="degree-content-mobile">
-            <h3>DATA</h3>
-          </div>
-          <div class="degree-content-mobile">
-            <h3>BUSINESS</h3>
-          </div>
-          <div class="degree-content-mobile">
-            <h3>MARKETING</h3>
-          </div>
+
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>SOFTWARE ENGINEERING</h3>
+            </div>
+          </a>
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>COMPUTER ART</h3>
+            </div>
+          </a>
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>DESIGN</h3>
+            </div>
+          </a>
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>DATA</h3>
+            </div>
+          </a>
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>BUSINESS</h3>
+            </div>
+          </a>
+          <a href="#">
+            <div class="degree-content-mobile">
+              <h3>MARKETING</h3>
+            </div>
+          </a>
         </div>
       </div>
 
